# minifetch

./: AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  PORTABILITY.md  README.md  config.h  embed_logo.sh  install.sh  logo_embedded.inc  minifetch  minifetch.c  todo.txt  topo.c
.github/workflows/: c-cpp.yml  ci.yml
frames/: logo.txt  logo0.txt  logo1.txt  logo2.txt  logo3.txt
include/: cli.h  compat.h  config.h  core.h  hidden.h  linux_extras.h  logo.h  term.h
packaging/arch/minifetch-git/: .SRCINFO  PKGBUILD
src/: cli.c  compat.c  core.c  hidden.c  linux_extras.c  main.c  term.c
tests/: smoke.sh
tools/: embed_logo.sh
